--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Ping Pong Game</title>
   </head>
   <body>
-    
+    <h1 class="jumbotron bg-info">Ping-Pong Rocks!</h1>
+    <div class="container">
+      <h2>Rules of the game:</h2>
+      <p>The Ping Pong game will count up to your number with the following exceptions:</p>
+      <ul>
+        <li>Numbers divisible by 3 are replaced with "ping"</li>
+        <li>Numbers divisible by 5 are replaced with "pong"</li>
+        <li>Numbers divisible by 15 are replaced with "pingpong"</li>
+      </ul>
+    </div>
   </body>
 </html>
