--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
       </form>
       <button type="submit" class="btn btn-info" id="number-inputted">Start</button>
     </div>
+    <div class="container bg-success hide">
+      
+    </div>
   </body>
 </html>
