move submit button inside form div.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
         <li>Numbers divisible by 15 are replaced with "pingpong"</li>
       </ul>
       <form id="number-entry">
-        <span class="bold">Enter your chosen number!</span>&nbsp;&nbsp;<input type="text" id="number-entered">
+        <div class="form-group">
+          <span class="bold">Enter your chosen number!</span>&nbsp;&nbsp;<input type="text" id="number-entered">
+        </div>
+        <button type="submit" class="btn btn-info" id="number-inputted">Start</button>
       </form>
-      <button type="submit" class="btn btn-info" id="number-inputted">Start</button>
     </div>
     <div class="container bg-success hide">
-      
+
     </div>
   </body>
 </html>
