--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       </form>
     </div>
     <div class="container bg-success hide">
+      <ul id="result-list">
 
+      </ul>
     </div>
   </body>
 </html>
